--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@font-face{
+    font-family: owais;
+    src: url('./Roboto/Roboto-Italic.ttf');
+    font-family: owais 1;
+    src: url('./Roboto/Roboto-Light.ttf');
+    font-family: owais 2;
+    src: url('./Roboto/Roboto-LightItalic.ttf');
+    font-family: owais 3;
+    src:  url("https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=BIZ+UDPMincho&family=Open+Sans:ital@1&family=Poppins:wght@100;200;300;400;600;700&display=swap");
+    
+
+
+}
 body {
     padding: 0px;
     margin: 0px;
@@ -10,21 +23,20 @@ body {
     background-size: cover;
     position: relative;
 }
-h1, h2, h3, a {
+h1, h2, h3 {
     font-weight: normal;
     color: #192c16;
     margin: 0px;
     font-weight: bold;
+    font-family: owais;
 }
 h1 {
-    font-family: Georgia, Times, serif;
     font-size: 300%;
     text-shadow: 2px 2px 3px #050505;
     padding-bottom: 10px;
     
 }
 h2 {
-    font-family: "Gill Sans", Arial, sans-serif;
     font-size: 90%;
     text-transform: uppercase;
     letter-spacing: 0.2em;
@@ -33,25 +45,30 @@ h3 {
     font-size: 150%;
 
 }
-p {
-    font-family: Arial, Verdana, sans-serif;
+.second {
+    font-family: owais 1;
     line-height: 1.4em;
     color: #020e04;
     
 }
-p.intro:first-line {
+.intro {
     font-weight: bold;
+    font-family: 'BIZ UDMincho', serif;
+    font-family: 'Poppins', sans-serif;
 }
 .credits{
-    font-style: italic;
     text-align: right;
+    font-family: owais 3;
 
 }
 a{
     text-decoration: none;
+    font-family: owais 2;
+    color: blue;
 
 }
 a:hover{
     text-decoration: underline;
+
 }
 
